// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carryOn 1`] = `
<DocumentFragment>
  <div>
    value
  </div>
</DocumentFragment>
`;

exports[`carryOn 2`] = `
<DocumentFragment>
  <div>
    new value
  </div>
</DocumentFragment>
`;

exports[`carryOn alt 1`] = `
<DocumentFragment>
  <div>
    thing value
  </div>
</DocumentFragment>
`;

exports[`carryOn alt 2`] = `
<DocumentFragment>
  <div>
    thing new value
  </div>
</DocumentFragment>
`;
